# JANA2

./: .gitattributes  .gitignore  CHANGES  CITATION.cff  CMakeLists.txt  INSTALL  LICENSE  Makefile  README.md  SConstruct  configure  configure.ac  reconf
src/: CHANGES  INSTALL  Makefile  SConscript  configure  configure.ac  reconf
src/BMS/: Makefile  Makefile.MYSQL  Makefile.ROOT  Makefile.SunOS  Makefile.XERCES  Makefile.cMsg  Makefile.common  Makefile.common.in  Makefile.config.in  Makefile.gSOAP  Makefile.lib  Makefile.shlib  jana_conf.mk.in  main_files.sh
src/JANA/: JApplication.cc  JApplication.h  JCalibration.cc  JCalibration.h  JCalibrationCCDB.h  JCalibrationFile.cc  JCalibrationFile.h  JCalibrationGenerator.h  JCalibrationGeneratorCCDB.h  JEvent.cc  JEvent.h  JEventLoop.cc  JEventLoop.h  JEventProcessor.cc  JEventProcessor.h  JEventSink.cc  JEventSink.h  JEventSinkJIL.h  JEventSource.cc  JEventSource.h  JEventSourceGenerator.h  JEventSourceGenerator_NULL.h  JEventSource_NULL.h  JException.cc  JException.h  JException2.h  JFactory.h  JFactoryGenerator.h  JFactory_base.cc  JFactory_base.h  JGeometry.cc  JGeometry.h  JGeometryMYSQL.cc  JGeometryMYSQL.h  JGeometryXML.cc  JGeometryXML.h  JLog.cc  JLog.h  JObject.cc  JObject.h  (+20 more)
src/JANA/doc/: Doxyfile
src/doc/: gendoc.cc  generate_root_doc.csh
src/examples/: CMakeLists.txt  README  SConscript
src/examples/BlockExample/: BlockExampleProcessor.cc  BlockExampleProcessor.h  BlockExampleSource.cc  BlockExampleSource.h  CMakeLists.txt  MyBlock.h  MyObject.h  main.cc
src/examples/CsvWriter/: CMakeLists.txt  CsvWriter.cc  README.md
src/examples/DstExample/: CMakeLists.txt  DataObjects.h  DstExample.cc  DstExampleFactory.cc  DstExampleFactory.h  DstExampleProcessor.cc  DstExampleProcessor.h  DstExampleSource.cc  DstExampleSource.h
src/examples/EventGroupExample/: BlockingGroupedEventSource.h  CMakeLists.txt  EventGroupExamplePlugin.cc  GroupedEventProcessor.h  GroupedEventSource.h  TridasEvent.h
src/examples/InteractiveStreamingExample/: CMakeLists.txt  DecodeDASSource.cc  InteractiveStreamingExample.cc  JFactoryGenerator_streamDet.h  RootProcessor.cc  RootProcessor.h
src/examples/JExample1/: CMakeLists.txt  JExample1.cc  README.md
src/examples/JExample2/: CMakeLists.txt  JEventProcessor_example2.h  JEventSource_example2.cc  JEventSource_example2.h  JExample2.cc  JFactoryGenerator_example2.h  MyCluster.cc  MyCluster.h  MyEvent.h  MyHit.h  SConscript
src/examples/JExample7/: AHitAnomalyDetector.h  AHitParser.h  BHit.h  BHitFactory.h  CMakeLists.txt  DummyZmqPublisher.cc  DummyZmqPublisher.h  ReadoutMessage.h  ReadoutMessageAuto.h  ReadoutMessageManual.h  SConscript  ZmqMain.cc  ZmqTransport.h  zmq.hpp
src/examples/JObjectDatamodel/: CMakeLists.txt  CalorimeterCluster.h  CalorimeterHit.h  F250Hit.h
src/examples/MetadataExample/: CMakeLists.txt  MetadataAggregator.cc  MetadataAggregator.h  MetadataExample.cc  README.md  RandomTrackSource.cc  RandomTrackSource.h  Track.h  TrackMetadata.h  TrackSmearingFactory.cc  TrackSmearingFactory.h
src/examples/PodioDatamodel/: CMakeLists.txt  README.md
src/examples/PodioExample/: CMakeLists.txt  DatamodelGlue.h  ExampleClusterFactory.cc  ExampleClusterFactory.h  ExampleMultifactory.cc  ExampleMultifactory.h  PodioExample.cc  PodioExampleProcessor.cc  PodioExampleProcessor.h  PodioExampleSource.cc  PodioExampleSource.h  layout.yaml
src/examples/PodioExample2/: DatamodelGlue.h  ExampleClusterFactory.cc  PodioExampleProcessor.cc  layout.yaml  podio_generated_files.cmake
src/examples/PodioFactories/: PodioClusteringFactory.h  PodioFactories.cc
src/examples/PodioFileReader/: PodioFileReader.cc
src/examples/PodioFileWriter/: CMakeLists.txt  PodioFileWriter.cc
src/examples/RootDatamodelExample/: CMakeLists.txt  JTestRootEventSource.cc  JTestRootEventSource.h  JTestRootProcessor.h
src/examples/StreamingExample/: AHit.h  AHitAnomalyDetector.h  AHitBHitFuser.h  AHitParser.h  CMakeLists.txt  ReadoutMessageAuto.h  ZmqMain.cc
src/examples/SubeventCUDAExample/: CMakeLists.txt  README.md  SubeventCUDAExample.cu
src/examples/SubeventExample/: CMakeLists.txt  SubeventExample.cc
src/examples/TimesliceExample/: CMakeLists.txt  CollectionTabulators.h  MyClusterFactory.h  MyDataModel.h  MyEventFactory.h  MyEventProcessor.h  MyFileReader.h  MyFileReaderGenerator.h  MyFileWriter.h  MyProtoclusterFactory.h  MyTimesliceFactory.h  MyTimesliceSource.h  MyTimesliceSplitter.h  MyTimesliceUnfolder.h  TimesliceExample.cc
src/examples/Tutorial/: CMakeLists.txt  Cluster.h  Cluster_factory_Simple.cc  Cluster_factory_Simple.h  Hit.csv  Hit.h  QuickTutorial.cc  RandomSource.cc  RandomSource.h  SimpleClusterFactory.cc  SimpleClusterFactory.h  Tutorial.cc  TutorialProcessor.cc  TutorialProcessor.h
src/examples/UnitTestingExample/: CMakeLists.txt  Cluster_factory_Simple_Tests.cc  SimpleClusterFactoryTests.cc
src/examples/event_group_example/: BlockingGroupedEventSource.h  CMakeLists.txt  EventGroupExamplePlugin.cc  GroupedEventProcessor.h  GroupedEventSource.h  TridasEvent.h  event_group_example.cc
src/examples/example01/: JEventSourceGenerator_MySource.cc  JEventSourceGenerator_MySource.h  JEventSource_MySource.cc  Makefile  README.example01  example01.cc
src/examples/example02/: JEventProcessor_MyProcessor.cc  JEventProcessor_MyProcessor.h  JEventSource_MySource.cc  JEventSource_MySource.h  RawHit.h  (+3 more)
src/lib/: SConscript
src/libJANA/: JApplication.cc  JApplication.h  JEventProcessor.cc  JEventProcessor.h  JEventSource.cc  JEventSource.h  JEventSourceGenerator.cc  JFactoryGenerator.cc  JFactoryGenerator.h  JParameterManager.cc  JParameterManager.h  JQueue.cc  JQueue.h  JResourceManager.cc  JResourceManager.h  JTask.cc  JThread.cc  JThread.h  JVersion.h  SConscript
src/m4/: ax_lib_xerces.m4  cmsg.m4  root.m4
src/plugins/: CMakeLists.txt  Makefile  SConscript
src/programs/: CMakeLists.txt  SConscript
src/python/: CMakeLists.txt
src/scripts/: Makefile  mkeventsource  mkfactory  mkprocessor
src/unit_tests/: SConscript  catch.hpp
src/utilities/: Makefile  SConscript
(+2725 files in other folders)
